fix(Docker): Fix DB connections to point to docker instances
